# ProvisionsModManager

./: .editorconfig  .gitignore  Extension Registry Paths.md  Extension Support.html  Extension Support.md  LICENSE  Program Chain.odg  README.MD  Service Commands.md  Stack.md  eslint.config.js.disabled  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
CFG_SCRIPT/: index.js  package.json  possible_template.txt  version1.js
CFG_SCRIPT/examples/: test.cfg  test2.cfg
MICRO_FRONTENDS/EXTENSION/: package.json  pnpm-lock.yaml  vite.config.ts
MICRO_FRONTENDS/EXTENSION/src/: main.ts
MICRO_FRONTENDS/IDE/: SCRIPT.MD  SCRIPT_V2.MD  TODO.MD  package.json
TFMOD/: .gitignore  CONTRIBUTING.md  Features.md  compiled_example_script.cfg  dev.bat  example.toml  generateThemes.js  gulpfile.js  note.txt  old vite config.txt  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js  vpk_file_struct.txt
TFMOD/src/: app.css  app.d.ts  app.html  stylify.css
TFMOD/src-tauri/: Cargo.toml  old.txt  tauri.conf.json
TFMOD/src-tauri/src/: main.rs  main.rs.old
TFMOD/src/lib/: Greet.svelte  Key.svelte  Keyboard-Qwerty.svelte  Link.svelte  Mod-list.svelte  Mod.svelte  Switch.svelte  UtilityCard.svelte  defaultMargin.css  extensionManager.svelte  externalLinks.js  i18n.js  license.svelte  navButton.svelte  navDropdown.js  settingsTab.js  theme-blue.css  theme-green.css  theme-purple.css  theme-red.css  theme-yellow.css  theme.js  theme.svelte  update.js
TFMOD/src/routes/: +error.svelte  +layout.svelte  +layout.svelte.old
TFMOD/static/: splash.html
TFMOD/static/workers/: vpk.ts
TFMOD_BOOTSTRAP/: todo.md
TFMOD_BRIDGE/: cargo.toml.disabled  manifest.chromium.nix.json  manifest.chromium.windows.json  manifest.firefox.windows.json  package main.go  tfmod.extension.nativehost.bat  tfmod.extension.nativehost.js
TFMOD_EXTENSION/: .gitignore  background.js  dev.bat  manifest.json  package.json  pnpm-lock.yaml  provisions.js  settings.html  settings.js  tsconfig.json
TFMOD_EXTENSION/_locales/en/: messages.json
TFMOD_EXTENSION/src/: background.js  background.ts  openfortress.fun.ts  prefortress.com.ts  provisions.js  settings.html  settings.js  settings.ts  tf2maps.net.ts
TFMOD_EXTENSION/src/lib/: common.ts  defaults.ts  storage.ts
TFMOD_EXTENSION_FIREFOX/: manifest.json  package.json  pnpm-lock.yaml
TFMOD_EXTENSION_FIREFOX/_locales/en/: messages.json
TFMOD_EXTENSION_FIREFOX/src/: background.ts  gamebanana.com.ts  mods.tf.ts  settings.css  tf2classic.com.ts
TFMOD_EXTENSION_FIREFOX/src/lib/: common.ts
TFMOD_EXTENSION_NATIVEHOST/: manifest.firefox.nix.json  package.json  pnpm-lock.yaml  tfmod.extension.nativehost.sh
TFMOD_EXTENSION_VITE/: .gitignore  Bridge.md  globals.d.ts  manifest.json  manifest_background.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
TFMOD_EXTENSION_VITE/patches/: vite-plugin-web-extension@3.2.0.patch
TFMOD_EXTENSION_VITE/public/: settings.css
TFMOD_EXTENSION_VITE/src/: background.ts  colors.tf.ts  gamebanana.com.ts  mods.tf.css  mods.tf.ts  openfortress.fun.ts  prefortress.com.ts  settings.css  settings.html  settings.ts  tf2classic.com.ts  tf2maps.net.ts
TFMOD_EXTENSION_VITE/src/lib/: common.ts  defaults.ts
TFMOD_EXTENSION_VITE/src/modstf/: mods.tf.css  mods.tf.ts
TFMOD_LIB/: README.MD
TFMOD_SERVICE/: go.mod  server.go
VPK_RUST/: Cargo.toml
VPK_RUST/src/: main.rs
patches/: stylelint-non-zero-length-expect-unit@1.0.0.patch
src/lib/js/: docs.ts
src/routes/: +layout.svelte  +layout.ts
(+132 files in other folders)
