[package]
name = "TFMOD"
version = "0.0.1"
description = "A mod manager for Team Fortress 2"
authors = ["Nicholas Miller"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-exists", "fs-read-file", "fs-remove-file", "fs-write-file", "http-request", "process-exit", "shell-open", "shell-sidecar", "system-tray", "window-create", "window-maximize", "window-minimize", "window-set-decorations", "window-start-dragging", "window-unmaximize"] }
ezsockets = "0.5"
uuid = "1.3"
registry = "1.2.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
