[package]
name = "tfmod"
version = "0.0.1"
description = "A mod manager for Team Fortress 2"
authors = ["Nicholas Miller"]
license = "GPL 3.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["clipboard-write-text", "devtools", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-file", "fs-rename-file", "fs-write-file", "http-request", "os-all", "process-exit", "shell-execute", "shell-open", "system-tray", "updater", "window-all"] }
zip = "0.6.5"
registry = "1.2.3"
warp = "0.3.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
